# rspy

./: .editorconfig  .gitignore  .markdownlint.jsonc  .pre-commit-config.yaml  CHANGELOG.md  Cargo.toml  Makefile  README.md  command-history.txt  cspell.json  pyproject.toml  rustfmt.toml
.github/workflows/: cargo_publish.yml  cargo_test.yml  coverage.yml
examples/: arr_vec_enumerate.rs  enumerate.py  input.py  input.rs  mkdir.py  mkdir.rs  reversed.py  reversed.rs  sorted.py  sorted.rs  string_constants.py  string_constants.rs  string_enumerate.py  string_enumerate.rs  time_sleep.py  time_sleep.rs
src/: enumerate.rs  input.rs  iterable.rs  lib.rs  pathlib.rs  sorted.rs  string.rs  time.rs
src/iterable/: for_array.rs  for_str.rs  for_vec.rs  mod.rs
src/reversed/: for_array.rs  for_str.rs  for_vec.rs  mod.rs
tests/: integration_test.rs  string.rs
tests/common/: mod.rs
