[package]
name = "rspy"
version = "0.1.2"
description = "Pythonic interface for Rust"
repository = "https://github.com/seijinrosen/rspy"
readme = "README.md"
license = "MIT"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dev-dependencies]
pretty_assertions = "1.3.0"


[package.metadata.docs.rs]
cargo-args = ["-Zunstable-options", "-Zrustdoc-scrape-examples"]


[[example]]
name = "input"
doc-scrape-examples = true
