[package]
name = "rspy"
version = "0.1.10"
description = "Pythonic interface for Rust"
repository = "https://github.com/seijinrosen/rspy"
readme = "README.md"
license = "MIT"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.68"

[dev-dependencies]
pretty_assertions = "1.3.0"
tempfile = "3.3.0"


[package.metadata.docs.rs]
rustdoc-args = ["--cfg", "docsrs"]
cargo-args = ["-Zunstable-options", "-Zrustdoc-scrape-examples"]


[lib]
doc-scrape-examples = true


[[example]]
name = "input"
doc-scrape-examples = true


[[example]]
name = "string_constants"
doc-scrape-examples = true


[[example]]
name = "string_enumerate"
doc-scrape-examples = true
