[tool.poetry]
name = "rspy"
version = "0.1.0"
description = ""
authors = ["seijinrosen <86702775+seijinrosen@users.noreply.github.com>"]
readme = "README.md"

package-mode = false

[tool.poetry.dependencies]
python = "^3.11"

[tool.poetry.group.dev.dependencies]
bandit = "^1.7.4"
black = "^24.3.0"
pre-commit = "^2.21.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
